# bbqio

./: AGENTS.md  Cargo.toml  README.md
src/: lib.rs
