[package]
name = "bbqio"
version = "0.0.0"
edition = "2024"
description = "embedded_io_async wrappers for bbqueue"
readme = "README.md"
repository = "https://github.com/tommasoclini/bbqio.git"
license = "MIT"
keywords = ["bbqueue", "embedded", "embedded-io-async"]
categories = ["embedded", "no-std", "no-std::no-alloc"]

[dependencies]
bbqueue = { version = "0.6.2", default-features = false }
embedded-io-async-v0-6 = { package = "embedded-io-async", version = "0.6.1", optional = true }
embedded-io-async-v0-7 = { package = "embedded-io-async", version = "0.7.0", optional = true }

[features]
default = ["io_v0-7"]
io_v0-6 = ["dep:embedded-io-async-v0-6"]
io_v0-7 = ["dep:embedded-io-async-v0-7"]
